--- a/AstroSimulation/AstroSimulation.vcxproj
+++ b/AstroSimulation/AstroSimulation.vcxproj
@@ -125,6 +125,7 @@
     <ClCompile Include="../imgui/imgui.cpp" />
     <ClCompile Include="../imgui/imgui_draw.cpp" />
     <ClCompile Include="../imgui/imgui_demo.cpp" />
+    <ClCompile Include="Graphics.cpp" />
     <ClCompile Include="ImguiUtil.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="ObjectSettings.cpp" />
@@ -132,10 +133,12 @@
     <ClCompile Include="PhysObject.cpp" />
     <ClCompile Include="Sphere.cpp" />
     <ClCompile Include="Simulation.cpp" />
+    <ClCompile Include="UserInterface.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Camera.h" />
     <ClInclude Include="Ellipse.h" />
+    <ClInclude Include="Graphics.h" />
     <ClInclude Include="imconfig.h" />
     <ClInclude Include="imgui.h" />
     <ClInclude Include="ImguiUtil.h" />
@@ -148,6 +151,7 @@
     <ClInclude Include="stb_rect_pack.h" />
     <ClInclude Include="stb_textedit.h" />
     <ClInclude Include="stb_truetype.h" />
+    <ClInclude Include="UserInterface.h" />
     <ClInclude Include="ValueWithUnits.h" />
     <ClInclude Include="Simulation.h" />
   </ItemGroup>
